--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TDSReportByLoginID.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TDSReportByLoginID.cshtml
@@ -82,9 +82,9 @@
                                                             <td>@Item.LoginId</td>
                                                             <td >@Item.Name</td>
                                                             <td>@Item.PAN</td>
-                                                            <td>@Item.TDSAmount</td>
-                                                            <td>@Item.NetAmount</td>
-                                                            <td>@Item.GrossAmount</td>
+                                                            <td>@Item.TDSAmount1</td>
+                                                            <td>@Item.Amount1</td>
+                                                            <td>@Item.GrossAmount1</td>
                                                         </tr>
                                                 i++;
                                             }
