Changes in Topup and retop

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
@@ -64,10 +64,14 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-
-                                        <div class="row">
-                                           
+                                            <div class="col-md-4">
+                                                <div class="form-group row">
+                                                    <label class="col-sm-3 col-form-label">Block</label>
+                                                    <div class="col-sm-9">
+                                                        @Html.DropDownListFor(m => m.Fk_BlockId, new SelectList(ViewBag.ddlblock, "Value", "Text"), new { @class = "form-control"})
+                                                    </div>
+                                                </div>
+                                            </div>
                                             <div class="col-md-4">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Plot Number <span style="color: red">*</span></label>
@@ -84,6 +88,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                        </div>
+                                        <div class="row">
+                                            
                                             <div class="col-md-4">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Topup Date <span style="color: red">*</span></label>
@@ -92,9 +99,6 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="row">
-                                           
                                             <div class="col-md-4">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Description </label>
@@ -112,6 +116,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                        </div>
+                                        <div class="row">
+                                            
                                             <div class="col-md-4">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Payment Mode <span style="color: red">*</span></label>
@@ -120,11 +127,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                           
                                         </div>
                                         <div class="row">
-
-
                                             <div class="col-md-4" id="bankname" style="display: none">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Bank Name </label>
@@ -246,11 +250,11 @@
             $('#FK_SectorId').focus();
             return false;
         }
-        if ($('#Fk_BlockId').val() == '0') {
-            $("#Fk_BlockId").addClass('errortext');
-            $('#Fk_BlockId').focus();
-            return false;
-        }
+        //if ($('#Fk_BlockId').val() == '0') {
+        //    $("#Fk_BlockId").addClass('errortext');
+        //    $('#Fk_BlockId').focus();
+        //    return false;
+        //}
 
         if ($('#PlotNumber').val() == '') {
             $("#PlotNumber").addClass('errortext');
