--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
@@ -84,14 +84,24 @@
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Amount <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Topup Amount", @onkeypress = "return isNumberKey(event);" })
+                                                        @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Topup Amount", @onkeypress = "return isNumberKey(event);", @onchange = "return getAmountinWords();" })
                                                     </div>
                                                 </div>
                                             </div>
+                                            
                                         </div>
                                         <div class="row">
-                                            
-                                            <div class="col-md-4">
+                                            <div class="col-md-6">
+                                                <div class="form-group row">
+                                                    <label class="col-sm-2 col-form-label">In Words<span style="color: white">*</span></label>
+                                                    <div class="col-sm-10">
+                                                        @Html.TextBoxFor(m => m.word, new { @class = "form-control", @style = "font-weight:800;color:white;", @placeholder = "Amount in words", @disabled = "true" })
+
+
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Topup Date <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
@@ -99,6 +109,8 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                        </div>
+                                        <div class="row">
                                             <div class="col-md-4">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Description </label>
@@ -112,13 +124,10 @@
                                                     <label class="col-sm-3 col-form-label">Receipt No  <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
 
-                                                        @Html.TextBoxFor(m => m.ReceiptNo, new { @class = "form-control", @Placeholder = "Receipt No", @onkeypress = "return isNumberKey(event);" })
+                                                        @Html.TextBoxFor(m => m.ReceiptNo, new { @class = "form-control", @Placeholder = "Receipt No" })
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="row">
-                                            
                                             <div class="col-md-4">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Payment Mode <span style="color: red">*</span></label>
@@ -232,7 +241,20 @@
 
         return true;
     }
+    function getAmountinWords() {
+        var Amount = $('#Amount').val();
+        $.ajax({
+            url: "/Accounts/AmountinWords",
+            Type: "Get",
+            DataType: "JSON",
+            data: { Amount: Amount },
+            success: function (data) {
+                debugger;
+                $('#word').val(data.word);
+            }
 
+        });
+    }
     function validateform() {
         $(".errortext").removeClass("errortext");
         if ($('#LoginId').val() == '') {
