--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
@@ -147,7 +147,7 @@
                                                     <label class="col-sm-3 col-form-label">Receipt No <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
                                                        
-                                                        @Html.TextBoxFor(m => m.ReceiptNo, new { @class = "form-control", @Placeholder = "Receipt No", @onkeypress = "return isNumberKey(event);", @onchange ="return validateReceipt();" })
+                                                        @Html.TextBoxFor(m => m.ReceiptNo, new { @class = "form-control", @Placeholder = "Receipt No", @onchange ="return validateReceipt();" })
                                                     </div>
                                                 </div>
                                             </div>
