--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -151,11 +151,11 @@
     <script src="../../AssociatePanelcss/app-assets/js/core/app-menu.min.js"></script>
     <script src="../../AssociatePanelcss/app-assets/js/core/app.min.js"></script>
     <script src="../../AssociatePanelcss/app-assets/js/scripts/components.min.js"></script>
-    @*<script>
+    <script>
     $(document).ready(function () {
         $("#myModal").modal('show');
     });
-    </script>*@
+    </script>
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -167,7 +167,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="newyear">
-                                <img style="width:100%" src="../WebsiteCss/hmpop.jpg" class="img-responsive" />
+                                <img style="width:100%" src="../WebsiteCss/KohinoorCityOffer.jpeg" class="img-responsive" />
                             </div>
                         </div>
                     </div>
