--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
@@ -82,8 +82,6 @@
                                                                 <th>Upgradation Date</th>
                                                                 <th>Payment Mode</th>
                                                                 <th>Description</th>
-                                                              
-                                                               
                                                                 <th>Price</th>
                                                                 <th>Calculation Status</th>
                                                                 <th>ReceiptNo</th>
@@ -108,12 +106,7 @@
                                                                             <td>@Item.UpgradtionDate</td>
                                                                             <td>@Item.PaymentMode</td>
                                                                             <td>@Item.Description</td>
-                                                                           
-
-                                                                           
-
                                                                             <td>@Item.Amount</td>
-
                                                                             <td>@Item.Status</td>
                                                                             <td>@Item.ReceiptNo</td>
                                                                             <td>
@@ -173,7 +166,7 @@
                 </div>
                 <div class="modal-body">
                     <input type="text" class="form-control" id="printingdate" readonly />
-                    <input type="hidden" id="hdfloginnid" />
+                        <input type="hidden" id="hdfloginnid" />
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal" onclick="closepopup();">Close</button>
@@ -209,17 +202,18 @@
 </script>
 <script>
     $(document).ready(function () {
+        debugger;
         $('#dataTables-example').DataTable({
             responsive: true
         });
         $("input").attr("autocomplete", "off");
-
         var cityuse = [];
         $("#loader").css({ 'display': '' });
         $.ajax({
             url: '/AdminReports/GetUserList',
             type: 'Post',
             success: function (response) {
+                debugger;
                 if (response != null) {
                     $(response).each(function (index, item) {
                         cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
