--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/BusinessReport.cshtml
@@ -183,6 +183,16 @@
         else {
             return true;
         }
+
+        //var LoginId = $("#LoginId").val();
+        //if (LoginId=="")
+        //{
+        //    $("#ToLoginID").val(null);
+        //}
+        //else
+        //{
+        //    var loginid = $("#ToLoginID").val();
+        //}
     }
 
 
