--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TDSReportByLoginID.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TDSReportByLoginID.cshtml
@@ -173,7 +173,8 @@
         var login = $('#LoginId').val();
         if (login == "") {
             $('#ToLoginID').val(null);
-        } else {
+        }
+        else {
             var loginid = $('#ToLoginID').val();
 
         }
