--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/AssociateIncomeReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/AssociateIncomeReport.cshtml
@@ -63,7 +63,7 @@
                                                     </div>
                                                     <div class="col-lg-3">
                                                         <br />
-                                                        <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
+                                                        <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" onclick="return validate();"/>
                                                     </div>
                                                 </div>
                                                 <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
@@ -194,5 +194,21 @@
 
         return true;
     }
+
+
+    function validate()
+    {
+        var loginid = $("#LoginId").val();
+        if (loginid=="")
+        {
+            $("#ToLoginID").val(null);
+        }
+        else
+        {
+            var loginid = $("#ToLoginID").val();
+        }
+    }
+
+
 
 </script>
