--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Layout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Layout.cshtml
@@ -265,9 +265,9 @@
                     <a href="/User/AssociateDashBoard"><i class="feather icon-mail"></i><span class="menu-title" data-i18n="Email">Dashboard</span></a>
                 </li>
 
-                <li class=" nav-item">
+                @*<li class=" nav-item">
                     <a href="/User/Registration"><i class="feather icon-message-square"></i><span class="menu-title" data-i18n="Chat">Registration</span></a>
-                </li>
+                </li>*@
 
                 <li class=" nav-item">
                     <a href="/User/TopupList"><i class="feather icon-check-square"></i><span class="menu-title" data-i18n="Todo">Top Up List</span></a>
