--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/UpdateAssociateProfile.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/UpdateAssociateProfile.cshtml
@@ -194,6 +194,16 @@
                                                     </div>
                                                 </div>
                                             </div>
+
+                                            <div class="col-md-4">
+                                                <div class="form-group row">
+                                                    <label class="col-sm-3 col-form-label">City</label>
+                                                    <div class="col-sm-9">
+                                                        @Html.TextBoxFor(m => m.AdharNo, new { @class = "form-control", @Placeholder = "Adhar No", @Disabled = "disabled" })
+                                                    </div>
+                                                </div>
+                                            </div>
+
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6">
