--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/UpdateAssociateProfile.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminProfile/UpdateAssociateProfile.cshtml
@@ -32,10 +32,6 @@
                                 <div class="tab-content">
                                     <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
 
-
-
-
-
                                         <div class="row">
                                             <div class="col-md-4">
                                                 <div class="form-group row">
@@ -197,9 +193,9 @@
 
                                             <div class="col-md-4">
                                                 <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label">City</label>
+                                                    <label class="col-sm-3 col-form-label">Adhar Number</label>
                                                     <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.AdharNo, new { @class = "form-control", @Placeholder = "Adhar No", @Disabled = "disabled" })
+                                                        @Html.TextBoxFor(m => m.AdharNo, new { @class = "form-control", @Placeholder = "Adhar No" })
                                                     </div>
                                                 </div>
                                             </div>
